# treasury

./: .dockerignore  .env.example  .env.production.example  .gitignore  ANALYTICS_FIX.md  API_TEST_RESULTS.md  CHANGES_SUMMARY.md  COMPANY_DROPDOWN_FIX.md  COMPANY_FILTERING_FIX.md  CONFIGURATION_FINALE.md  CORRECTIONS_FINALES.md  CREATEDBY_FILTER_FIX.md  DATA_REFRESH_FEATURE.md  DEBUG_INSTRUCTIONS.md  DEPLOYMENT_GUIDE.md  Dockerfile.jobs  ETL_VISIBILITY_FIX_NOV6_2024.md  EXCLUDE_FROM_ANALYTICS_FINAL.md  FIXES_AND_TESTS_NOV5_2024.md  IMMEDIATE_FIX_APPLIED.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_NOV2_2024.md  MANUAL_ENTRY_CREATED_BY_FIX.md  MOVEMENTS_UX_IMPROVEMENTS.md  Makefile  OWN_DATA_FILTERING_COMPLETE.md  OWN_DATA_PERMISSION_FEATURE.md  PASSWORD_CHANGE_PAGE.md  PASSWORD_VALIDATION_FIX.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_FILES.txt  PRODUCTION_SETUP_SUMMARY.md  QUICK_START.md  QUICK_TEST_COMMANDS.md  README.md  README_ANALYTICS.md  RECOVERY_SUMMARY.md  REFERENCE_VALIDATION_FIX_NOV5_2024.md  REMOVE_VISIBILITY_FIELD_NOV5_2024.md  (+21 more)
backend/: .dockerignore  .env.example  Dockerfile.prod  README.md  requirements.txt
docs/: ANALYTICS_BACKEND_EXAMPLE.md  ANALYTICS_COMPANY_FIX.md  ANALYTICS_IMPLEMENTATION.md  ANALYTICS_QUICK_START.md  CHANGELOG_ETL.md  CHECKLIST_TESTS_RAPIDE.md  ETL_DELETE_INSERT_SUMMARY.md  ETL_README.md  FIXES_APPLIED.md  FIX_ANALYTICS_CSS_STYLING.md  FIX_REACT_HOOKS_DEPENDENCIES.md  GLOBAL_COMPANY_SELECTOR.md  GUIDE_TESTS_ODOO.md  INDEX.md  PARALLEL_EXECUTION_SUMMARY.md  README_TESTS.md  RECHARTS_MIGRATION.md  SETUP.md  (+7 more)
(+116 files in other folders)
